[package]
name = "Ringo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-beta.1"
lazy_static = "1.5.0"
byteorder = "1.5.0"

[workspace]
resolver = "2"
members = [
    ".",
    "benchmarks",
]

[workspace.lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(crossbeam_loom)',
    'cfg(crossbeam_sanitize)',
] }
unreachable_pub = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV

[workspace.lints.clippy]
# Suppress buggy or noisy clippy lints
declare_interior_mutable_const = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/7665
lint_groups_priority = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/12920
