[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"]}
hdrhistogram = "7.0"
crossbeam-channel = "0.5.13"
crossbeam = "0.8.4"
atomicring = "1.2.9"

[[bin]]
name = "spsc"
path = "spsc.rs"
doc = false

[lints]
workspace = true
